# esp32s3_object_detection

./: .gitignore  README.md  pyproject.toml
3D-Models/: SD_Card_Camera_Holder.step  Servo_Antenna_Stand.stl
ESP32S3-Image-Classification/EZ_images/: requirements.txt
day_1/: README.md
day_2/: Hypertuning.ipynb  Model_Example-Input.ipynb  Model_Example.ipynb  README.md
day_2/.ipynb_checkpoints/: Hypertuning-checkpoint.ipynb  Model_Example-checkpoint.ipynb
day_3/: README.md
day_3/3D-Models/: SD_Card_Camera_Holder.stl  XIAO_Servo_Holder.stl  XIAO_Servo_Stand_Assembly.step
day_3/duckie-tracker-example/: README.md
duckie-tracker-example/DuckieTracker/: DuckieTracker.ino
notebooks/: Hypertuning.ipynb  Model_Example.ipynb  Untitled.ipynb
notebooks/.ipynb_checkpoints/: Hypertuning-checkpoint.ipynb  Model_Example-checkpoint.ipynb  Untitled-checkpoint.ipynb
resources/: .gitignore
src/: get_images.py
src/.ipynb_checkpoints/: get_images-checkpoint.py
src/esp32s3_object_detection/: __init__.py
