[project]
name = "esp32s3-object-detection"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Clein2312", email = "cleinsarmiento@hotmail.com" }
]
dependencies = [
    "opencv-python>=4.10.0.84",
    "requests>=2.32.3",
    "loguru>=0.7.2",
    "jupyterlab>=4.3.2",
    "tensorflow>=2.18.0",
    "ray>=2.40.0",
    "matplotlib>=3.9.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/esp32s3_object_detection"]

[tool.rye.scripts]
# Run Script
get_images = "python ./src/get_images.py"
